# pretix-ebics

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  devenv.nix  fintech.nix  flake.nix  pretixplugin.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
pretix_ebics/: apps.py  ebics.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
pretix_ebics/migrations/: 0001_initial.py
pretix_ebics/templates/pretix_ebics/: _actions.html  delete.html  form.html  index.html
tests/: __init__.py  conftest.py  settings.py  test_ebics.py  test_metadata.py  test_models.py  test_services.py  test_signals.py  test_views.py
